6679333	missing quotes around zero length parameter values
6720896	add mail.mime.uudecode.ignoreerrors system property
6720896	add mail.mime.uudecode.ignoremissingbeginend system property
6730637	deadlocks in IMAP provider when connections fail
6738454	deadlock when connection is broken
6738468	javadocs use fully qualified names
6797756	StringIndexOutOfBoundsError in InternetAddress.parseHeader()
GF 3929	Inconsistent synchronization in com.sun.mail.iap.Protocol
GF 4997	BASE64DecoderStream.skip (etc) skips the wrong number of octets
GF 5189	Can't specify SSLSocketFactory for STARTTLS in Javamail 1.4
GF 5861	add mail.<protocol>.starttls.required prop to require use of STARTTLS
<no id>	ignore socket timeout while waiting in IMAP IDLE
<no id>	fix bug in MailDateFormat parsing in non-lenient mode
<no id>	add mail.mime.multipart.allowempty system property to handle (illegal)
	empty multiparts (see javax.mail.internet.MimeMultipart)
<no id>	add mail.mime.multipart.ignoreexistingboundaryparameter system property
	to allow parsing multiparts with incorrect boundary parameters
<no id>	handle address of the form "Undisclosed-Recipients:;"
<no id>	add com.sun.mail.util.DecodingException to distinguish decoding errors
<no id>	add mail.mime.ignoreunknownencoding system property (see MimeUtility)
<no id>	ignore errors from SMTP RSET command
<no id>	InternetAddress - detect more errors when strict, accept more when not
<no id>	add mail.<protocol>.socketFactory and .ssl.socketFactory properties
<no id>	add mail.<protocol>.ssl.enable property
<no id>	add mail.<protocol>.ssl.checkserveridentity prop for RFC 2595 checks
<no id>	add mail.<protocol>.ssl.checkserveridentity prop for RFC 2595 checks
<no id>	add com.sun.mail.util.MailSSLSocketFactory class
<no id>	fix possible NPE in MimeMessage if flags is not set in copy constructor
<no id>	SMTP I/O failure incorrectly reports valid sent addresses
<no id>	avoid creating IMAPMessage objects until they're actually needed