@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2008 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2009 Sun Microsystems, Inc. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -663,7 +663,7 @@ public class MimeMessage extends Message implements MimePart {
      */
     public Address[] getReplyTo() throws MessagingException {
 	Address[] a = getAddressHeader("Reply-To");
-	if (a == null)
+	if (a == null || a.length == 0)
 	    a = getFrom();
 	return a;
     }
